Correct styles.css to better fix alignment issue with a href

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,7 @@
 .grid img {
     max-width: 100%;
     height: auto;
+    vertical-align: bottom;
 }
 
 @media (max-width: 767px) {
@@ -30,10 +31,4 @@
     height: 75%;
     width: 75%;
     aspect-ratio: 16/9;
-}
-
-.grid a {
-    display: inline-block;
-    padding: 0px;
-    margin-bottom: -5px;
 }
